<resources>
    <string name="app_name">ApksFull</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="loi_ket_noi">Connect error! please check network connection and try again</string>
    <string name="mn_trangchu">Home page</string>
    <string name="mn_yeuthich">Fabvorite app</string>
    <string name="mn_hethong">System</string>
    <string name="mn_ql_ungdung">Application manager</string>
    <string name="mn_ql_apk">Apk manager</string>
    <string name="mn_tienich">Utility</string>
    <string name="mn_quyetmavach">Scan QrCode</string>
    <string name="mn_congcu">Tool</string>
    <string name="mn_caidat">Setting</string>
    <string name="mn_phanhoi">Report</string>
    <string name="mn_danhgia">Rating</string>
    <string name="mn_dangxuat">Logout</string>
    <string name="mn_thoat">Close App</string>
    <string name="detail_caidat">INSTALL</string>
    <string name="xemthem">Read mote...</string>
    <string name="mota">Description:</string>
    <string name="thongtinnhapt">More info about Developer:</string>
    <string name="cungdanhmuc">Same category:</string>
    <string name="taive">Download</string>
    <string name="tag_newapp">New Apps</string>
     <string name="tag_Category">Category</string>
    <string name="tag_topdownload">Top Downloads</string>
    <string name="tag_tophotapp">Top Hot</string>
    <string name="tag_app_manager">Apps Manager</string>
    <string name="tag_apk_manager">Apks manager</string>
    <string name="tag_favorite_app">Favorites Apps</string>
    <string name="phanhoi">Report</string>
    <string name="spinner_title">Select type Error</string>
    <string name="nhapphanhoi">Input report</string>
    <string name="btn_gui">Send</string>
    <string name="btn_huybo">Cancel</string>
     <string name="save">save</string>
    <string name="permission_dangerous">Status: Dangerous</string>
    <string name="permission_normal">Status: Normal</string>
    <string name="version_string">Version: </string>
    <string name="dialog_button_ignore">Ignore</string>
    <string name="dialog_button_uninstall">Uninstall</string>
    <string name="login">Login</string>
    <string name="ACCESS_CHECKIN_PROPERTIES">Allows read/write access to the properties table in the checkin database, to change values that get uploaded</string>
	<string name="ACCESS_COARSE_LOCATION">Allows an app to access approximate location derived from network location sources such as cell towers and Wi-Fi</string>
	<string name="ACCESS_FINE_LOCATION">Allows an app to access precise location from location sources such as GPS, cell towers, and Wi-Fi</string>
	<string name="ACCESS_LOCATION_EXTRA_COMMANDS">Allows an application to access extra location provider commands</string>
	<string name="ACCESS_MOCK_LOCATION">Allows an application to create mock location providers for testing</string>
	<string name="ACCESS_NETWORK_STATE">Allows applications to access information about networks</string>
	<string name="ACCESS_SURFACE_FLINGER">Allows an application to use SurfaceFlinger s low level features</string>
	<string name="ACCESS_WIFI_STATE">Allows applications to access information about Wi-Fi networks</string>
	<string name="ACCOUNT_MANAGER">Allows applications to call into AccountAuthenticators</string>
	<string name="ADD_VOICEMAIL">Allows an application to add voicemails into the system</string>
	<string name="AUTHENTICATE_ACCOUNTS">Allows an application to act as an AccountAuthenticator for the AccountManager</string>
	<string name="BATTERY_STATS">Allows an application to collect battery statistics</string>
	<string name="BIND_ACCESSIBILITY_SERVICE">Must be required by an AccessibilityService, to ensure that only the system can bind to it</string>
	<string name="BIND_APPWIDGET">Allows an application to tell the AppWidget service which application can access AppWidget s data</string>
	<string name="BIND_DEVICE_ADMIN">Must be required by device administration receiver, to ensure that only the system can interact with it</string>
	<string name="BIND_INPUT_METHOD">Must be required by an InputMethodService, to ensure that only the system can bind to it</string>
	<string name="BIND_NFC_SERVICE">Must be required by a HostApduService or OffHostApduService to ensure that only the system can bind to it</string>
	<string name="BIND_NOTIFICATION_LISTENER_SERVICE">Must be required by an NotificationListenerService, to ensure that only the system can bind to it</string>
	<string name="BIND_PRINT_SERVICE">Must be required by a PrintService, to ensure that only the system can bind to it</string>
	<string name="BIND_REMOTEVIEWS">Must be required by a RemoteViewsService, to ensure that only the system can bind to it</string>
	<string name="BIND_TEXT_SERVICE">Must be required by a TextService (e.g)</string>
	<string name="BIND_VPN_SERVICE">Must be required by a VpnService, to ensure that only the system can bind to it</string>
	<string name="BIND_WALLPAPER">Must be required by a WallpaperService, to ensure that only the system can bind to it</string>
	<string name="BLUETOOTH">Allows applications to connect to paired bluetooth devices</string>
	<string name="BLUETOOTH_ADMIN">Allows applications to discover and pair bluetooth devices</string>
	<string name="BLUETOOTH_PRIVILEGED">Allows applications to pair bluetooth devices without user interaction</string>
	<string name="BODY_SENSORS">Allows an application to access data from sensors that the user uses to measure what is happening inside his/her body, such as heart rate</string>
	<string name="BRICK">Required to be able to disable the device (very dangerous!)</string>
	<string name="BROADCAST_PACKAGE_REMOVED">Allows an application to broadcast a notification that an application package has been removed</string>
	<string name="BROADCAST_SMS">Allows an application to broadcast an SMS receipt notification</string>
	<string name="BROADCAST_STICKY">Allows an application to broadcast sticky intents</string>
	<string name="BROADCAST_WAP_PUSH">Allows an application to broadcast a WAP PUSH receipt notification</string>
	<string name="CALL_PHONE">Allows an application to initiate a phone call without going through the Dialer user interface for the user to confirm the call being placed</string>
	<string name="CALL_PRIVILEGED">Allows an application to call any phone number, including emergency numbers, without going through the Dialer user interface for the user to confirm the call being placed</string>
	<string name="CAMERA">Required to be able to access the camera device</string>
	<string name="CAPTURE_AUDIO_OUTPUT">Allows an application to capture audio output</string>
	<string name="CAPTURE_SECURE_VIDEO_OUTPUT">Allows an application to capture secure video output</string>
	<string name="CAPTURE_VIDEO_OUTPUT">Allows an application to capture video output</string>
	<string name="CHANGE_COMPONENT_ENABLED_STATE">Allows an application to change whether an application component (other than its own) is enabled or not</string>
	<string name="CHANGE_CONFIGURATION">Allows an application to modify the current configuration, such as locale</string>
	<string name="CHANGE_NETWORK_STATE">Allows applications to change network connectivity state</string>
	<string name="CHANGE_WIFI_MULTICAST_STATE">Allows applications to enter Wi-Fi Multicast mode</string>
	<string name="CHANGE_WIFI_STATE">Allows applications to change Wi-Fi connectivity state</string>
	<string name="CLEAR_APP_CACHE">Allows an application to clear the caches of all installed applications on the device</string>
	<string name="CLEAR_APP_USER_DATA">Allows an application to clear user data</string>
	<string name="CONTROL_LOCATION_UPDATES">Allows enabling/disabling location update notifications from the radio</string>
	<string name="DELETE_CACHE_FILES">Allows an application to delete cache files</string>
	<string name="DELETE_PACKAGES">Allows an application to delete packages</string>
	<string name="DEVICE_POWER">Allows low-level access to power management</string>
	<string name="DIAGNOSTIC">Allows applications to RW to diagnostic resources</string>
	<string name="DISABLE_KEYGUARD">Allows applications to disable the keyguard</string>
	<string name="DUMP">Allows an application to retrieve state dump information from system services</string>
	<string name="EXPAND_STATUS_BAR">Allows an application to expand or collapse the status bar</string>
	<string name="FACTORY_TEST">Run as a manufacturer test application, running as the root user</string>
	<string name="FLASHLIGHT">Allows access to the flashlight</string>
	<string name="FORCE_BACK">Allows an application to force a BACK operation on whatever is the top activity</string>
	<string name="GET_ACCOUNTS">Allows access to the list of accounts in the Accounts Service</string>
	<string name="GET_PACKAGE_SIZE">Allows an application to find out the space used by any package</string>
	<string name="GET_TASKS">Allows an application to get information about the currently or recently running tasks</string>
	<string name="GET_TOP_ACTIVITY_INFO">Allows an application to retrieve private information about the current top activity, such as any assist context it can provide</string>
	<string name="GLOBAL_SEARCH">This permission can be used on content providers to allow the global search system to access their data</string>
	<string name="HARDWARE_TEST">Allows access to hardware peripherals</string>
	<string name="INJECT_EVENTS">Allows an application to inject user events (keys, touch, trackball) into the event stream and deliver them to ANY window</string>
	<string name="INSTALL_LOCATION_PROVIDER">Allows an application to install a location provider into the Location Manager</string>
	<string name="INSTALL_PACKAGES">Allows an application to install packages</string>
	<string name="INSTALL_SHORTCUT">Allows an application to install a shortcut in Launcher</string>
	<string name="INTERNAL_SYSTEM_WINDOW">Allows an application to open windows that are for use by parts of the system user interface</string>
	<string name="INTERNET">Allows applications to open network sockets</string>
	<string name="KILL_BACKGROUND_PROCESSES">Allows an application to call killBackgroundProcesses(String)</string>
	<string name="LOCATION_HARDWARE">Allows an application to use location features in hardware, such as the geofencing api</string>
	<string name="MANAGE_ACCOUNTS">Allows an application to manage the list of accounts in the AccountManager</string>
	<string name="MANAGE_APP_TOKENS">Allows an application to manage (create, destroy, Z-order) application tokens in the window manager</string>
	<string name="MANAGE_DOCUMENTS">Allows an application to manage access to documents, usually as part of a document picker</string>
	<string name="MASTER_CLEAR">Not for use by third-party applications</string>
	<string name="MEDIA_CONTENT_CONTROL">Allows an application to know what content is playing and control its playback</string>
	<string name="MODIFY_AUDIO_SETTINGS">Allows an application to modify global audio settings</string>
	<string name="MODIFY_PHONE_STATE">Allows modification of the telephony state - power on, mmi, etc</string>
	<string name="MOUNT_FORMAT_FILESYSTEMS">Allows formatting file systems for removable storage</string>
	<string name="MOUNT_UNMOUNT_FILESYSTEMS">Allows mounting and unmounting file systems for removable storage</string>
	<string name="NFC">Allows applications to perform I/O operations over NFC</string>
</resources>