<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/dialog_bar"
        >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
             android:layout_weight="1"
            android:src="@drawable/ic_launcher" 
           />

        <TextView
            android:id="@+id/textView1"
            android:paddingLeft="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:layout_weight="9"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_permission_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"        
        android:orientation="horizontal"
        android:layout_weight="1" >       
        <Button
            android:id="@+id/dialog_permission_btn_uninstall"
             style="@style/button_background"
             android:layout_margin="5dp"
            android:text="@string/dialog_button_uninstall" />
         <Button
            android:id="@+id/dialog_permission_btn_ignore"
            style="@style/button_background"
            android:layout_margin="5dp"
            android:text="@string/dialog_button_ignore" />
        

    </LinearLayout>

</LinearLayout>
